* Add optional recurring_task_id field to Task so we can trace which Recurring Task   caused it to be spawned.   * This required moving the recurring.Id model to task.RecurringTaskId because Go doesn't     allow "circular" imports   * Note that the user-facing API model does not have this field at all when creating Tasks.   * Update ES template and Kibana index pattern to have this field
